--- a/assets/style.css
+++ b/assets/style.css
@@ -83,6 +83,7 @@ nav ul li:active {
 }
 
 .card {
+    box-shadow: 0px 0px 15px #555;
     width: 125vh;
     left: 30%;
     background-color: #d9d9d9 !important;
@@ -180,12 +181,118 @@ nav ul li:active {
 }
 
 .sidemenu .block .fas{
-    color: #78b1a8;
-    text-shadow: 1px 1px 5px black;
+    color: #238878;
     font-size: 2.5vh;
     padding: 15px;
 }
 
 .sidemenu .selected .fas{
     color: #d9d9d9;
+}
+
+.calendar {
+    box-shadow: 0px 0px 15px #555;
+    font-family: "Madimi One", sans-serif;
+    width: 25vh;
+    height: 35vh;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative; /* Add position relative */
+}
+.monthyear {
+    background-color: #78b1a8;
+    text-align: center;
+    padding: 2vh 0;
+}
+.days {
+    background-color: #d9d9d9;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+    font-size: 70%;
+    position: relative; /* Add position relative */
+}
+.day {
+    color: #238878;
+    padding: 9.7px 0;
+    border-bottom: 1px solid #ccc;
+    position: relative; /* Add position relative */
+}
+.current-day {
+    color:#d9d9d9;
+    border: 2px solid #238878;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.footermain {
+    border-radius: 15px 15px 0px 0px;
+    box-shadow: 0px 0px 15px #555;
+    background-color:#d9d9d9;
+    padding-top: 15px;
+    color: #fff;
+}
+
+footer {
+    border-radius: 15px 15px 0px 0px;
+    background-color: #238878;
+    color: #fff;
+    padding: 20px 0;
+}
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.footer-logo img {
+    height: 50px; /* Adjust height as needed */
+}
+.footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.footer-links ul li {
+    display: inline;
+    margin-right: 20px;
+}
+.footer-links ul li:last-child {
+    margin-right: 0;
+}
+.footer-links ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+.footer-social ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.footer-social ul li {
+    display: inline;
+    margin-right: 10px;
+}
+.footer-social ul li:last-child {
+    margin-right: 0;
+}
+.footer-social ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 20px;
+}
+.footer-bottom {
+    text-align: center;
+    margin-top: 10px;
+}
+
+footer ul li a .fa-brands{
+    box-shadow: 0px 0px 5px #555;
+    text-shadow: 0px 0px 5px #555;
 }
